[tool.poetry]
name = "sber_opportunity"
version = "0.1.0"
description = ""
authors = ["VChudo <106248234+VChudo@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
